appId: com.google.samples.apps.nowinandroid.demo.debug
name: Settings
tags:
  - settings
---
- launchApp:
    clearState: true
- tapOn: Settings
- assertVisible: Theme
- assertVisible: Use Dynamic Color
- assertVisible: Dark mode preference
- tapOn: OK
